# project-one

./: .gitignore  CMakeLists.txt  Makefile  Project-One.pro  README.md  all  buildAndRun.sh  knowledgeBase.txt  mainwindow.cpp  mainwindow.h  variablesList.csv
.github/workflows/: c-cpp.yml
include/: BackChain.h  BackChain.hpp  ClauseItem.hpp  ForwardChain.h  ForwardChain.hpp  KnowledgeBase.h  KnowledgeBase.hpp  Statement.h  Statement.hpp  VariableListItem.h  VariableListItem.hpp  mainwindow.h
resources/: .gitignore
resources/docs/: Variables_for_Decision_Tree.xlsx
resources/reports/: Project1-A04626934-Report.docx  ~$oject1-A04626934-Report.docx
src/: BackChain.cpp  ClauseItem.cpp  ForwardChain.cpp  KnowledgeBase.cpp  Project1-bss64-dat54-rrh93.cpp  Statement.cpp  VariableListItem.cpp  main.cpp  mainwindow.cpp
